[gd_scene load_steps=22 format=3 uid="uid://crcoaw25punpi"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_gtncs"]
[ext_resource type="Texture2D" uid="uid://c0vsh57tvl37k" path="res://assets/characters/slime.png" id="1_m0po8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_usp8x"]
radius = 7.07107

[sub_resource type="AtlasTexture" id="AtlasTexture_v7olr"]
atlas = ExtResource("1_m0po8")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_psbve"]
atlas = ExtResource("1_m0po8")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ra4t8"]
atlas = ExtResource("1_m0po8")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_djy4e"]
atlas = ExtResource("1_m0po8")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_psw0r"]
atlas = ExtResource("1_m0po8")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iugag"]
atlas = ExtResource("1_m0po8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ucvh"]
atlas = ExtResource("1_m0po8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6ajl"]
atlas = ExtResource("1_m0po8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fu5f"]
atlas = ExtResource("1_m0po8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mha1"]
atlas = ExtResource("1_m0po8")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8t5d"]
atlas = ExtResource("1_m0po8")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_452un"]
atlas = ExtResource("1_m0po8")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1rb4"]
atlas = ExtResource("1_m0po8")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur6ea"]
atlas = ExtResource("1_m0po8")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kxxy"]
atlas = ExtResource("1_m0po8")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kftls"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7olr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psbve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ra4t8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djy4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psw0r")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iugag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ucvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6ajl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fu5f")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mha1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8t5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_452un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1rb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur6ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kxxy")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8eorc"]
radius = 55.0091

[sub_resource type="CircleShape2D" id="CircleShape2D_n6x2y"]
radius = 12.0

[node name="enemy" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 3
script = ExtResource("1_gtncs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_usp8x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kftls")
animation = &"idle"

[node name="detection_area" type="Area2D" parent="."]
visible = false
position = Vector2(0, 3)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_8eorc")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_n6x2y")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="health_bar" type="ProgressBar" parent="."]
modulate = Color(0.278431, 0.780392, 0.494118, 1)
offset_left = -7.0
offset_top = 10.0
offset_right = 133.0
offset_bottom = 37.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="regin_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="regin_timer" to="." method="_on_regin_timer_timeout"]
